test/parser/input_programs/invalid_programs/program4.tea
# an invalid for statement

for x if a is 3 in y:
  out("what")
end